added sessions on the Isle of the Abbey

--- a/logseq/bak/pages/Slanisko/2024-05-31T06_29_54.493Z.Desktop.md
+++ b/logseq/bak/pages/Slanisko/2024-05-31T06_29_54.493Z.Desktop.md
@@ -52,7 +52,6 @@
 	-
 	- ## Rada Slaniska
 	  id:: 6572ee5e-e2bd-459b-9d8c-fb7c26a84f29
-	  collapsed:: true
 		- Rada se zaobírá samotným řízením Slaniska z organizačního hlediska, řešením jeho problémů, financí a tak dále. Skládá se z pěti členů, kterými aktuálně jsou [[Melistráda Zákles Měďná]], [[Eda]], [[Gelan]], [[Eliander]] a [[Anders Solmor]].
 		- Ohledně případného spojenectví s ještěrci sídlící v nedaleké [jeskyni](Ještěrecká jeskyně) nebyla rada úplně jednotná. Po audienci s [Morginem](Morgin) se však rozhodli vyslat [Anderse Slomora](Anders Solmor) spolu s částí městské hlídky na vyjednávací misi.
 		- Zároveň se rada usnesla, že si skupina dobrodruhů za pročištění [alchymistova domu](Alchymistův dům) po prověření [Elianderem](Eliander) zaslouží svou slíbenou odměnu 100 zl. větší odměny se skupina už ani nedožadovala.
@@ -85,5 +84,5 @@
 	  CLOCK: [2023-12-08 Fri 10:17:38]
 	  :END:
 	- DONE **[[Skuruti v Zenopově věž]]** - K [Miguelovi](Miguel) se doneslo, že na východ od slaniska jsou u řeky staré opuštěné ruiny věže, kde by se mohli ukrývat skuruti, jenž ukradli jeho milovanou Kaňku.
-	- DOING **Nekromatné na ostrově** - Podle hlášení, která se dostala k [Andersi Solmorovi](Anders Solmor), se na blízkém [Ostrově opatství](Ostrov opatství), proslulém nektromantickými praktikami, objevil v poslední době kouř. Chtěl by, aby se na to někdo podíval a zjistil, co se tam doopravdy děje, nabízí za to 2000 zl. Údajně je možné se doplavit lodí poblíž tohoto ostrova.
+	- DOING **Nekromatné na ostrově** - Podle hlášení, která se dostala k [Andersi Solmorovi](Anders Solmor), se na blízkém ostrově se objevila nejspíše skupina nektomantů. Chtěl by, aby se na to někdo podíval a zjistil, co se tam doopravdy děje.
 	-
